feat：修改默认环境为dev，默认不开启ssl，测试环境开启ssl

--- a/laokou-cloud/laokou-register/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-register/src/main/resources/application.yml
@@ -89,7 +89,7 @@ server:
     basedir: logs
   ssl:
     # 开启证书
-    enabled: true
+    enabled: @SSL-ENABLED@
     # 证书位置
     key-store: classpath:scg-keystore.p12
     # 证书别名
