--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -22,7 +22,7 @@ server:
     enabled: true
   ssl:
     # 开启证书
-    enabled: true
+    enabled: @SSL-ENABLED@
     # 证书位置
     key-store: classpath:scg-keystore.p12
     # 证书别名
