--- a/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/application.yml
@@ -18,7 +18,7 @@ server:
   port: 1111
   ssl:
     # 开启证书
-    enabled: true
+    enabled: @SSL-ENABLED@
     # 证书位置
     key-store: classpath:scg-keystore.p12
     # 证书别名
