--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/src/main/resources/bootstrap.yml
@@ -24,7 +24,7 @@ spring:
         server-addr: ${NACOS-DISCOVERY-ADDRESS}
         namespace: ${NACOS-NAMESPACE}
         # https
-        secure: true
+        secure: @SSL-ENABLED@
       config:
         server-addr: ${NACOS-CONFIG-ADDRESS}
         namespace: ${NACOS-NAMESPACE}
