--- a/laokou-cloud/laokou-register/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-register/src/main/resources/application.yml
@@ -98,6 +98,8 @@ server:
     key-store-type: PKCS12
     # 口令
     key-store-password: laokou
+  http2:
+    enabled: true
 spring:
   application:
     name: @pom.artifactId@
