--- a/laokou-cloud/laokou-seata/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-seata/src/main/resources/application.yml
@@ -24,7 +24,8 @@ server:
     key-store-type: PKCS12
     # 口令
     key-store-password: laokou
-
+  http2:
+    enabled: true
 jasypt:
   encryptor:
     algorithm: PBEWithMD5AndDES
