--- a/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/application.yml
@@ -11,7 +11,8 @@ server:
     key-store-type: PKCS12
     # 口令
     key-store-password: laokou
-
+  http2:
+    enabled: true
 #spring
 spring:
   application:
