--- a/laokou-cloud/laokou-monitor/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-monitor/src/main/resources/application.yml
@@ -32,7 +32,8 @@ server:
     key-store-type: PKCS12
     # 口令
     key-store-password: laokou
-
+  http2:
+    enabled: true
 # spring
 spring:
   application:
