--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/src/main/resources/application.yml
@@ -27,7 +27,8 @@ server:
     key-store-type: PKCS12
     # 口令
     key-store-password: laokou
-
+  http2:
+    enabled: true
 #spring
 spring:
   application:
