feat：增加test公共模块

--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -87,6 +87,7 @@
         <module>laokou-common-monitor</module>
         <module>laokou-common-influxdb</module>
         <module>laokou-common-rabbitmq</module>
+        <module>laokou-common-test</module>
     </modules>
 
 </project>
