--- a/laokou-service/laokou-auth/laokou-auth-server/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-server/pom.xml
@@ -40,8 +40,8 @@
             <artifactId>laokou-common-trace</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-test</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
