--- a/laokou-service/laokou-module/laokou-api/laokou-api-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-api/laokou-api-server/pom.xml
@@ -11,15 +11,15 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-secret</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-test</artifactId>
         </dependency>
     </dependencies>
 
