--- a/laokou-service/laokou-module/laokou-test/laokou-test-elasticsearch/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/laokou-test-elasticsearch/pom.xml
@@ -13,11 +13,9 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-test</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
