--- a/laokou-service/laokou-module/laokou-api/laokou-api-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-api/laokou-api-server/pom.xml
@@ -20,6 +20,7 @@
         <dependency>
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
