--- a/laokou-service/laokou-module/laokou-im/laokou-im-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-server/pom.xml
@@ -106,6 +106,7 @@
         <dependency>
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
