--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/src/main/resources/application.yml
@@ -25,7 +25,7 @@ server:
     key-alias: ${spring.application.name}
     # 秘钥类型
     key-store-type: PKCS12
-    # 口令
+    # 证书密码
     key-store-password: laokou
   http2:
     enabled: true
