--- a/laokou-cloud/laokou-monitor/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-monitor/src/main/resources/application.yml
@@ -22,6 +22,17 @@ server:
   tomcat:
     max-connections: -1
     connection-timeout: 600000
+  ssl:
+    # 开启证书
+    enabled: @SSL-ENABLED@
+    # 证书位置
+    key-store: classpath:scg-keystore.p12
+    # 证书别名
+    key-alias: ${spring.application.name}
+    # 秘钥类型
+    key-store-type: PKCS12
+    # 证书密码
+    key-store-password: laokou
   http2:
     enabled: true
 
