--- a/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/application.yml
@@ -30,6 +30,7 @@ server:
     key-store-password: laokou
   http2:
     enabled: true
+  forward-headers-strategy: framework
 # spring
 spring:
   application:
