--- a/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/application.yml
@@ -13,6 +13,7 @@ server:
     key-store-password: laokou
   http2:
     enabled: true
+  forward-headers-strategy: native
 #spring
 spring:
   application:
