--- a/laokou-cloud/laokou-gateway/pom.xml
+++ b/laokou-cloud/laokou-gateway/pom.xml
@@ -112,8 +112,8 @@
             <artifactId>spring-cloud-circuitbreaker-sentinel</artifactId>
         </dependency>
         <dependency>
-            <groupId>de.codecentric</groupId>
-            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-monitor</artifactId>
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
