--- a/laokou-service/laokou-admin/laokou-admin-server/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-server/pom.xml
@@ -41,6 +41,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.laokou</groupId>
+			<artifactId>laokou-common-monitor</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-shardingsphere</artifactId>
 		</dependency>
 		<dependency>
