feat：maven增加密钥配置

--- a/laokou-cloud/laokou-xxl-job/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-xxl-job/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 jasypt:
   encryptor:
-    password: 5201314wumeihua
+    password: @JASYPT-ENCRYPTOR-PASSWORD@
     algorithm: PBEWithMD5AndDES
     iv-generator-classname: org.jasypt.iv.NoIvGenerator
 management:
