--- a/laokou-cloud/laokou-seata/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-seata/src/main/resources/application.yml
@@ -30,7 +30,7 @@ jasypt:
   encryptor:
     algorithm: PBEWithMD5AndDES
     iv-generator-classname: org.jasypt.iv.NoIvGenerator
-    password: 5201314wumeihua
+    password: @JASYPT-ENCRYPTOR-PASSWORD@
 
 spring:
   application:
