--- a/laokou-release/pom.xml
+++ b/laokou-release/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>laokou-release</artifactId>
     <version>3.1.1-M1</version>
     <name>laokou-release</name>
-    <description>一款企业级微服务架构的云服务多租户SaaS平台</description>
+    <description>一个企业级微服务架构的云服务多租户SaaS平台</description>
     <url>https://koushenhai.github.io/KCloud-Platform-Alibaba</url>
     <properties>
         <java.version>17</java.version>
