--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <module>laokou-service</module>
     </modules>
     <name>KCloud-Platform-Alibaba</name>
-    <description>一款企业级微服务架构的云服务多租户SaaS平台</description>
+    <description>一个企业级微服务架构的云服务多租户SaaS平台</description>
     <url>https://koushenhai.github.io/KCloud-Platform-Alibaba</url>
     <properties>
         <laokou.version>3.1.1</laokou.version>
