--- a/pom.xml
+++ b/pom.xml
@@ -198,9 +198,9 @@
                 <MYSQL-USERNAME>root</MYSQL-USERNAME>
                 <MYSQL-PASSWORD>laokou123</MYSQL-PASSWORD>
                 <MYSQL-HOST>192.168.30.128</MYSQL-HOST>
-                <MYSQL-DB-NACOS>kcloud_platform_nacos</MYSQL-DB-NACOS>
-                <MYSQL-DB-SEATA>kcloud_platform_seata</MYSQL-DB-SEATA>
-                <MYSQL-DB-XXL-JOB>kcloud_platform_xxl_job</MYSQL-DB-XXL-JOB>
+                <MYSQL-DB-NACOS>kcloud_platform_alibaba_nacos</MYSQL-DB-NACOS>
+                <MYSQL-DB-SEATA>kcloud_platform_alibaba_seata</MYSQL-DB-SEATA>
+                <MYSQL-DB-XXL-JOB>kcloud_platform_alibaba_xxl_job</MYSQL-DB-XXL-JOB>
                 <MYSQL-DB-POWER-JOB>kcloud_platform_alibaba_power_job</MYSQL-DB-POWER-JOB>
                 <MYSQL-PORT>3306</MYSQL-PORT>
                 <NACOS-NAMESPACE>a61abd4c-ef96-42a5-99a1-616adee531f3</NACOS-NAMESPACE>
@@ -231,9 +231,9 @@
                 <MYSQL-USERNAME>ENC(aEwhK+oj5wQ/pJfRcfwXAw==)</MYSQL-USERNAME>
                 <MYSQL-PASSWORD>ENC(gruSGjDZ03lAN3qyE5UisGE2tvN3gS3Y)</MYSQL-PASSWORD>
                 <MYSQL-HOST>192.168.30.128</MYSQL-HOST>
-                <MYSQL-DB-NACOS>kcloud_platform_nacos</MYSQL-DB-NACOS>
-                <MYSQL-DB-SEATA>kcloud_platform_seata</MYSQL-DB-SEATA>
-                <MYSQL-DB-XXL-JOB>kcloud_platform_xxl_job</MYSQL-DB-XXL-JOB>
+                <MYSQL-DB-NACOS>kcloud_platform_alibaba_nacos</MYSQL-DB-NACOS>
+                <MYSQL-DB-SEATA>kcloud_platform_alibaba_seata</MYSQL-DB-SEATA>
+                <MYSQL-DB-XXL-JOB>kcloud_platform_alibaba_xxl_job</MYSQL-DB-XXL-JOB>
                 <MYSQL-DB-POWER-JOB>kcloud_platform_alibaba_power_job</MYSQL-DB-POWER-JOB>
                 <MYSQL-PORT>3306</MYSQL-PORT>
                 <NACOS-NAMESPACE>a61abd4c-ef96-42a5-99a1-616adee531f3</NACOS-NAMESPACE>
@@ -265,11 +265,11 @@
                 <!--suppress UnresolvedMavenProperty -->
                 <MYSQL-HOST>${MYSQL-HOST:192.168.1.100}</MYSQL-HOST>
                 <!--suppress UnresolvedMavenProperty -->
-                <MYSQL-DB-NACOS>${MYSQL-DB-NACOS:kcloud_platform_nacos}</MYSQL-DB-NACOS>
+                <MYSQL-DB-NACOS>${MYSQL-DB-NACOS:kcloud_platform_alibaba_nacos}</MYSQL-DB-NACOS>
                 <!--suppress UnresolvedMavenProperty -->
-                <MYSQL-DB-SEATA>${MYSQL-DB-SEATA:kcloud_platform_seata}</MYSQL-DB-SEATA>
+                <MYSQL-DB-SEATA>${MYSQL-DB-SEATA:kcloud_platform_alibaba_seata}</MYSQL-DB-SEATA>
                 <!--suppress UnresolvedMavenProperty -->
-                <MYSQL-DB-XXL-JOB>${MYSQL-DB-XXL-JOB:kcloud_platform_xxl_job}</MYSQL-DB-XXL-JOB>
+                <MYSQL-DB-XXL-JOB>${MYSQL-DB-XXL-JOB:kcloud_platform_alibaba_xxl_job}</MYSQL-DB-XXL-JOB>
                 <!--suppress UnresolvedMavenProperty -->
                 <MYSQL-DB-POWER-JOB>${MYSQL-DB-POWER-JOB:kcloud_platform_alibaba_power_job}</MYSQL-DB-POWER-JOB>
                 <!--suppress UnresolvedMavenProperty -->
