--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -89,6 +89,7 @@
         <module>laokou-common-influxdb</module>
         <module>laokou-common-rabbitmq</module>
         <module>laokou-common-test</module>
+        <module>laokou-common-sensitive</module>
     </modules>
 
 </project>
