--- a/laokou-service/laokou-admin/laokou-admin-client/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-client/pom.xml
@@ -34,6 +34,10 @@
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-sensitive</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-common-jasypt</artifactId>
         </dependency>
     </dependencies>
