--- a/laokou-common/laokou-common-dynamic-router/pom.xml
+++ b/laokou-common/laokou-common-dynamic-router/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>laokou-common-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-freemarker</artifactId>
         </dependency>
