--- a/laokou-cloud/laokou-gateway/src/main/resources/bootstrap.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/bootstrap.yml
@@ -22,11 +22,18 @@ spring:
       discovery:
         server-addr: ${NACOS-DISCOVERY-ADDRESS}
         namespace: ${NACOS-NAMESPACE}
+        username: ${NACOS-USERNAME}
+        password: ${NACOS-PASSWORD}
+        group: ${NACOS-GROUP}
         # https
         secure: @SSL-ENABLED@
+        # true 临时 false 持久
+        ephemeral: true
       config:
         server-addr: ${NACOS-CONFIG-ADDRESS}
         namespace: ${NACOS-NAMESPACE}
+        username: ${NACOS-USERNAME}
+        password: ${NACOS-PASSWORD}
         group: ${NACOS-GROUP}
         refresh-enabled: true
         file-extension: yaml
