--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -31,7 +31,7 @@ server:
     # 证书密码
     key-store-password: laokou
   http2:
-    enabled: true
+    enabled: false
   forward-headers-strategy: native
 # spring
 spring:
