--- a/laokou-common/laokou-common-dynamic-router/pom.xml
+++ b/laokou-common/laokou-common-dynamic-router/pom.xml
@@ -39,6 +39,16 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-freemarker</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-nacos</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.laokou</groupId>
+                    <artifactId>laokou-common-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
 </project>
