--- a/laokou-common/laokou-common-shardingsphere/pom.xml
+++ b/laokou-common/laokou-common-shardingsphere/pom.xml
@@ -17,6 +17,12 @@
         <dependency>
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-nacos</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.laokou</groupId>
+                    <artifactId>laokou-common-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
