--- a/laokou-cloud/laokou-monitor/src/main/resources/bootstrap.yml
+++ b/laokou-cloud/laokou-monitor/src/main/resources/bootstrap.yml
@@ -19,6 +19,16 @@ spring:
   cloud:
     # nacos
     nacos:
+      discovery:
+        server-addr: ${NACOS-DISCOVERY-ADDRESS}
+        namespace: ${NACOS-NAMESPACE}
+        username: ${NACOS-USERNAME}
+        password: ${NACOS-PASSWORD}
+        group: ${NACOS-GROUP}
+        # https
+        secure: @SSL-ENABLED@
+        # true 临时 false 持久
+        ephemeral: true
       config:
         server-addr: ${NACOS-CONFIG-ADDRESS}
         namespace: ${NACOS-NAMESPACE}
