--- a/laokou-service/laokou-admin/laokou-admin-server/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-server/pom.xml
@@ -37,14 +37,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.laokou</groupId>
-			<artifactId>laokou-common-monitor</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.laokou</groupId>
-			<artifactId>laokou-common-monitor</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-shardingsphere</artifactId>
 		</dependency>
 		<dependency>
@@ -54,6 +46,10 @@
 		<dependency>
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-common-easy-excel</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.laokou</groupId>
@@ -118,6 +114,10 @@
 		<dependency>
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-admin-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.laokou</groupId>
