--- a/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/bootstrap.yml
@@ -29,6 +29,9 @@ spring:
           - data-id: application-common.yaml
             group: ${NACOS-GROUP}
             refresh: true
+          - data-id: application-common-monitor.yaml
+            group: ${NACOS-GROUP}
+            refresh: true
           - data-id: application-common-rocketmq.yaml
             group: ${NACOS-GROUP}
             refresh: true
