--- a/laokou-service/laokou-module/laokou-im/laokou-im-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-server/pom.xml
@@ -31,14 +31,6 @@
             <artifactId>laokou-common-netty</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.laokou</groupId>
-            <artifactId>laokou-common-monitor</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
         </dependency>
@@ -115,6 +107,10 @@
                     <artifactId>spring-security-oauth2-authorization-server</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
