fix: monitor报错模板找不到

--- a/laokou-cloud/laokou-seata/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-seata/src/main/resources/application.yml
@@ -41,7 +41,7 @@ spring:
 logging:
   config: classpath:logback-spring.xml
   file:
-    path: logs/seata
+    path: /logs/seata
   extend:
     logstash-appender:
       destination: 127.0.0.1:4560
