feat: rocketmq的topic、producer、consumer命名规范（横杆-改为下划线_）和rabbitmq代码提交

--- a/laokou-common/laokou-common-rabbitmq/pom.xml
+++ b/laokou-common/laokou-common-rabbitmq/pom.xml
@@ -10,4 +10,11 @@
     </parent>
     <artifactId>laokou-common-rabbitmq</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
