feat: rocketmq的topic、producer、consumer命名规范（横杆-改为下划线_）和rabbitmq代码提交

--- a/laokou-service/laokou-module/laokou-test/laokou-test-rabbitmq/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-test/laokou-test-rabbitmq/src/main/resources/application.yml
@@ -8,3 +8,10 @@ spring:
     username: root
     password: laokou123
     virtual-host: /
+    publisher-confirm-type: correlated
+    publisher-returns: true
+    listener:
+      simple:
+        acknowledge-mode: manual
+    template:
+      mandatory: true
