feat: auth设备码认证

--- a/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/application.yml
@@ -97,6 +97,8 @@ spring:
             - client_credentials
             - refresh_token
             - authorization_code
+            - urn:ietf:params:oauth:grant-type:device_code
+            - urn:ietf:params:oauth:grant-type:jwt-bearer
           scopes:
             - password
             - mail
