--- a/laokou-service/laokou-module/laokou-logstash/laokou-logstash-rocketmq/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-logstash/laokou-logstash-rocketmq/src/main/resources/application.yml
@@ -17,6 +17,19 @@
 # server
 server:
   port: 10002
+  ssl:
+    # 开启证书
+    enabled: @SSL-ENABLED@
+    # 证书位置
+    key-store: classpath:scg-keystore.p12
+    # 证书别名
+    key-alias: @pom.parent.artifactId@
+    # 秘钥类型
+    key-store-type: PKCS12
+    # 证书密码
+    key-store-password: laokou
+  http2:
+    enabled: true
 
 # spring
 spring:
