--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         <!--spring-framework版本-->
         <spring-framework.version>6.0.11</spring-framework.version>
         <!--cloud-alibaba版本-->
-        <spring-cloud-alibaba.version>2022.0.0.0-RC2</spring-cloud-alibaba.version>
+        <spring-cloud-alibaba.version>2022.0.0.0</spring-cloud-alibaba.version>
         <!--spring-doc版本-->
         <spring-doc.version>2.1.0</spring-doc.version>
         <docker.repostory>registry.cn-hangzhou.aliyuncs.com</docker.repostory>
