--- a/laokou-common/laokou-common-netty/pom.xml
+++ b/laokou-common/laokou-common-netty/pom.xml
@@ -23,6 +23,10 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
