--- a/laokou-service/laokou-module/laokou-im/laokou-im-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-server/pom.xml
@@ -137,6 +137,11 @@
             <artifactId>laokou-common-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
