--- a/laokou-service/laokou-auth/laokou-auth-adapter/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-adapter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.laokou</groupId>
         <artifactId>laokou-auth</artifactId>
-        <version>3.1.2</version>
+        <version>${laokou.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-auth-adapter</artifactId>
