--- a/laokou-service/laokou-auth/laokou-auth-infrastructure/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-infrastructure/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.laokou</groupId>
         <artifactId>laokou-auth</artifactId>
-        <version>3.1.2</version>
+        <version>${laokou.version}</version>
     </parent>
 
     <artifactId>laokou-auth-infrastructure</artifactId>
