--- a/laokou-service/laokou-auth/pom.xml
+++ b/laokou-service/laokou-auth/pom.xml
@@ -35,6 +35,7 @@
         <module>laokou-auth-infrastructure</module>
         <module>laokou-auth-domain</module>
         <module>laokou-auth-app</module>
+        <module>laokou-auth-adapter</module>
     </modules>
 
 </project>
