fix：security 解密失败

--- a/laokou-service/laokou-auth/laokou-auth-adapter/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-adapter/pom.xml
@@ -10,10 +10,19 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-auth-adapter</artifactId>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-swagger</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
