--- a/laokou-service/laokou-auth/laokou-auth-adapter/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-adapter/pom.xml
@@ -25,6 +25,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-trace</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-auth-app</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
