--- a/laokou-service/laokou-auth/laokou-auth-domain/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-domain/pom.xml
@@ -10,4 +10,16 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-auth-domain</artifactId>
 
+    <dependencies>
+        <!--安全模块-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-core</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
