--- a/laokou-service/laokou-auth/laokou-auth-domain/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-domain/pom.xml
@@ -11,7 +11,14 @@
     <artifactId>laokou-auth-domain</artifactId>
 
     <dependencies>
-        <!--安全模块-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-jose</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-authorization-server</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
