--- a/laokou-common/laokou-common-security/pom.xml
+++ b/laokou-common/laokou-common-security/pom.xml
@@ -29,7 +29,7 @@
     <dependencies>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-auth-client</artifactId>
+            <artifactId>laokou-auth-domain</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
