feat：auth cola改造

--- a/laokou-common/laokou-common-log/pom.xml
+++ b/laokou-common/laokou-common-log/pom.xml
@@ -45,7 +45,7 @@
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-auth-client</artifactId>
+            <artifactId>laokou-common-security</artifactId>
         </dependency>
         <!-- 解析客户端操作系统、浏览器等 -->
         <dependency>
